Correcing scrollbar and unclickable button bug.

--- a/css/main.css
+++ b/css/main.css
@@ -3,62 +3,76 @@
  * (C) Ad5001 2017
  */
 
-/** Hiding scrollbar */
-::-webkit-scrollbar {
-	display: none;
-}
 
-body {
-    -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
+/** Hiding scrollbar */
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 iframe {
-	width: 100%;
-	height: 85vh;
-	padding-left: 5px;
+    width: 100%;
+    height: 85vh;
+    padding-left: 5px;
 }
-.mdl-navigation__link[data-active-tab="true"] { /** Overwrites normal properties **/
-	background-color: #0097a7 !important;
+
+.mdl-navigation__link[data-active-tab="true"] {
+    /** Overwrites normal properties **/
+    background-color: #0097a7 !important;
 }
-.mdl-navigation__link:hover { /** Overwrites normal properties **/
-	background-color: #00b8d4 !important;
+
+.mdl-navigation__link:hover {
+    /** Overwrites normal properties **/
+    background-color: #00b8d4 !important;
 }
-.mdl-navigation__link:hover[data-active-tab="true"] { /** Overwrites normal properties **/
-	background-color: #0097a2 !important;
+
+.mdl-navigation__link:hover[data-active-tab="true"] {
+    /** Overwrites normal properties **/
+    background-color: #0097a2 !important;
 }
+
+
 /** Form based elements **/
+
 .mdl-button--file input {
-	cursor: pointer;
-	height: 100%;
-	right: 0;
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	width: 300px;
-	z-index: 4;
+    cursor: pointer;
+    height: 100%;
+    right: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 300px;
+    z-index: 4;
 }
+
 .mdl-textfield--file .mdl-textfield__input {
-	box-sizing: border-box;
-	width: calc(100% - 32px);
+    box-sizing: border-box;
+    width: calc(100% - 32px);
 }
+
 .mdl-textfield--file .mdl-button--file {
-	right: 0;
+    right: 0;
 }
+
 label {
-	color: rgba(0,0,0,.75);
+    color: rgba(0, 0, 0, .75);
 }
+
 .mld-button--download {
-	height: 54px !important;
-	padding: 8px 32px !important;
+    height: 54px !important;
+    padding: 8px 32px !important;
 }
-.mld-button--download *  {
-	display: inline;
-	vertical-align: center;
+
+.mld-button--download * {
+    display: inline;
+    vertical-align: center;
 }
+
+
 /** Mobile UI **/
+
 @media screen and (max-width:500px) {
-	#UploadButton {
-		margin: auto;
-	}
+    #UploadButton {
+        margin: auto;
+    }
 }
